# myWebserv

./: .gitignore  CMakeLists.txt  readme.md  webserv.cpp
ARequest/: ARequest.hpp
Buffer/: Storage.cpp  Storage.hpp
Event/: Event.cpp  Event.hpp
HTTP/: Request.cpp  Request.hpp  Response.cpp  Response.hpp
Server/: Connection.cpp  Connection.hpp  Handlers.cpp  Handlers.hpp  Location.cpp  Location.hpp  RequestParser.cpp  RequestParser.hpp  Server.cpp  Server.hpp  VirtualServer.cpp  VirtualServer.hpp
Source/AResponse/: AResponse.hpp
Source/Event/: Event.cpp  Event.hpp
Source/HTTP/: HTTPDefinitions.cpp  HTTPDefinitions.hpp  Request.cpp  Request.hpp  RequestParser.cpp  RequestParser.hpp  RequestProcessor.cpp  RequestProcessor.hpp  Response.cpp  Response.hpp
Source/Server/: Connection.cpp  Connection.hpp  Handlers.cpp  Handlers.hpp  Router.cpp  Router.hpp  Server.cpp  Server.hpp  VirtualServer.cpp  VirtualServer.hpp
Source/Storage/: Storage.cpp  Storage.hpp
Source/ThreadPool/: Job.hpp  ThreadPool.cpp
Storage/: Storage.cpp  Storage.hpp
ThreadPool/: Job.hpp  ThreadPool.cpp  ThreadPool.hpp
contents/: error.html  index.html
deprecated/: RequestParser.cpp  RequestParser.hpp
deprecated/HTTP/: Request.cpp  Request.hpp  Response.cpp  Response.hpp
deprecated/Storage/: Storage.cpp  Storage.hpp
